--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
             ],
             "scripts": [
               "src/assets/bower_components/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js",
               "src/assets/dist/js/adminlte.js",
               "node_modules/jquery/dist/jquery.js",
               "node_modules/datatables.net/js/jquery.dataTables.js"
