--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
-    "electron:windows": "npm run build:prod && npx electron-builder build --windows -p always",
+    "electron:windows": "npm run build:prod && npx electron-builder build --windows -p never",
     "electron:mac": "npm run build:prod && npx electron-builder build --mac",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run postinstall:web && ng e2e",
@@ -42,7 +42,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "electron-settings": "^3.2.0",
-    "electron-updater": "^4.0.5",
+    "electron-window-state": "^5.0.3",
     "izitoast": "^1.4.0",
     "jquery": "^3.3.1",
     "jquery-slimscroll": "^1.3.8"
