--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "electron-window-state": "^5.0.3",
     "izitoast": "^1.4.0",
     "jquery": "^3.3.1",
-    "jquery-slimscroll": "^1.3.8"
+    "jquery-slimscroll": "^1.3.8",
+    "ng2-izitoast": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
