--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "main": "main.js",
   "private": true,
   "scripts": {
+    "npm_pack": "cd dist/atmhotspot/bank && npm pack",
+    "install_lib": "npm run npm_pack && npm install dist/atmhotspot/bank/atmhotspot-bank-0.0.1.tgz",
     "postinstall": "npm run postinstall:electron && npx electron-builder install-app-deps",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
@@ -45,11 +47,12 @@
     "electron-window-state": "^5.0.3",
     "izitoast": "^1.4.0",
     "jquery": "^3.3.1",
-    "jquery-slimscroll": "^1.3.8",
-    "ng2-izitoast": "^2.0.0"
+    "ng2-izitoast": "^2.0.0",
+    "ngx-slimscroll": "^7.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-ng-packagr": "^0.10.7",
     "@angular/animations": "^7.1.1",
     "@angular/cli": "7.0.5",
     "@angular/common": "7.0.3",
@@ -69,7 +72,6 @@
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
     "@types/jquery": "^3.3.22",
-    "@types/jquery.slimscroll": "^1.3.31",
     "@types/node": "8.9.4",
     "codelyzer": "4.2.1",
     "conventional-changelog-cli": "^2.0.11",
@@ -84,11 +86,14 @@
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.1.0",
+    "ng-packagr": "^4.2.0",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
     "protractor": "^5.4.1",
     "rxjs": "6.3.3",
     "ts-node": "6.0.3",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "5.10.0",
     "typescript": "3.1.6",
     "wait-on": "2.1.0",
