--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -15,10 +16,13 @@
       "jasmine",
       "jasminewd2",
       "jquery",
-      "node",
-      "jquery.slimscroll"
+      "node"
     ],
-    "lib": ["es2017", "es2016", "es2015", "dom"]
+    "lib": ["es2017", "es2016", "es2015", "dom"],
+    "paths": {
+      "@atmhotspot/bank": ["dist/atmhotspot/bank"],
+      "@atmhotspot/bank/*": ["dist/atmhotspot/bank/*"]
+    }
   },
   "include": ["main.ts", "src/**/*"],
   "exclude": ["node_modules"]
