--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "scripts": {
     "npm_pack": "ng build @atmhotspot/bank && cd dist/atmhotspot/bank && npm pack",
-    "install_lib": "npm run npm_pack && npm install dist/atmhotspot/bank/atmhotspot-bank-1.0.0.tgz",
+    "install_lib": "npm install dist/atmhotspot/bank/atmhotspot-bank-1.0.0.tgz",
     "postinstall": "npm run postinstall:electron && npx electron-builder install-app-deps",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
@@ -42,6 +42,7 @@
   "dependencies": {
     "@atmhotspot/bank": "file:dist/atmhotspot/bank/atmhotspot-bank-1.0.0.tgz",
     "@auth0/angular-jwt": "^2.1.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "electron-settings": "^3.2.0",
@@ -49,7 +50,8 @@
     "izitoast": "^1.4.0",
     "jquery": "^3.3.1",
     "ng2-izitoast": "^2.0.0",
-    "ngx-slimscroll": "^7.1.0"
+    "ngx-slimscroll": "^7.1.0",
+    "sweetalert2": "^7.33.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
