--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jquery": "^3.3.1",
     "ng2-izitoast": "^2.0.0",
     "ngx-slimscroll": "^7.1.0",
+    "ngx-stripe": "^7.2.0",
     "sweetalert2": "^7.33.1"
   },
   "devDependencies": {
