--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   "main": "main.js",
   "private": true,
   "scripts": {
-    "npm_pack": "ng build @atmhotspot/bank && cd dist/atmhotspot/bank && npm pack",
-    "install_lib": "npm install dist/atmhotspot/bank/keyz-ng-atmhotspot-bank-1.0.1.tgz",
     "postinstall": "npm run postinstall:electron && npx electron-builder install-app-deps",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
@@ -40,19 +38,16 @@
     "version": "conventional-changelog -i CHANGELOG.mbd -s -r 0 && git add CHANGELOG.md"
   },
   "dependencies": {
-    "@angular/pwa": "^0.13.1",
     "@auth0/angular-jwt": "^2.1.0",
-    "@keyz/ng-atmhotspot-bank": "file:dist/atmhotspot/bank/keyz-ng-atmhotspot-bank-1.0.1.tgz",
+    "@codekeyz/ng-atmbank": "^1.0.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "bootstrap": "^3.3.7",
-    "electron-settings": "^3.2.0",
     "electron-window-state": "^5.0.3",
     "font-awesome": "^4.7.0",
     "izitoast": "^1.4.0",
     "jquery": "^3.3.1",
     "ng2-izitoast": "^2.0.0",
     "ngx-slimscroll": "^7.1.0",
-    "ngx-stripe": "^7.2.0",
     "sweetalert2": "^7.33.1"
   },
   "devDependencies": {
@@ -70,7 +65,6 @@
     "@angular/platform-browser": "7.0.3",
     "@angular/platform-browser-dynamic": "7.0.3",
     "@angular/router": "7.0.3",
-    "@angular/service-worker": "7.0.3",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
     "@types/bootstrap": "^4.1.2",
@@ -91,14 +85,11 @@
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.1.0",
-    "ng-packagr": "^4.2.0",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
     "protractor": "^5.4.1",
     "rxjs": "6.3.3",
     "ts-node": "6.0.3",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
     "tslint": "5.10.0",
     "typescript": "3.1.6",
     "wait-on": "2.1.0",
