--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,7 @@
       "node"
     ],
     "lib": ["es2017", "es2016", "es2015", "dom"],
-    "paths": {
-      "@atmhotspot/bank": ["dist/atmhotspot/bank"],
-      "@atmhotspot/bank/*": ["dist/atmhotspot/bank/*"]
-    }
+    "paths": {}
   },
   "include": ["main.ts", "src/**/*"],
   "exclude": ["node_modules"]
