--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@auth0/angular-jwt": "^2.1.0",
-    "@codekeyz/ng-atmbank": "^1.0.0",
+    "@codekeyz/ng-atmbank": "^1.0.1",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "bootstrap": "^3.3.7",
     "electron-window-state": "^5.0.3",
@@ -85,11 +85,14 @@
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.1.0",
+    "ng-packagr": "^4.2.0",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
     "protractor": "^5.4.1",
     "rxjs": "6.3.3",
     "ts-node": "6.0.3",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "5.10.0",
     "typescript": "3.1.6",
     "wait-on": "2.1.0",
