--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "serviceWorker": true
+              "serviceWorker": false
             }
           }
         },
